--- a/webstore.client/package.json
+++ b/webstore.client/package.json
@@ -14,15 +14,19 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.0",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/toolbar": "^3.12.0",
     "@stripe/react-stripe-js": "^2.8.0",
     "@stripe/stripe-js": "^4.5.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.5.4",
+    "pdfjs-dist": "^3.4.120",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-pdf": "^9.1.1",
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
