--- a/webstore.client/package.json
+++ b/webstore.client/package.json
@@ -29,6 +29,7 @@
     "react-pdf": "^9.1.1",
     "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^6.26.2",
+    "react-select": "^5.8.1",
     "react-toastify": "^10.0.5",
     "yup": "^1.4.0"
   },
