--- a/webstore.client/package.json
+++ b/webstore.client/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.5.4",
+    "lucide-react": "^0.452.0",
     "pdfjs-dist": "^3.4.120",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
